--- a/src/components/userForm/userForm.css
+++ b/src/components/userForm/userForm.css
@@ -1,26 +1,24 @@
 
 
-.form-row{
+/* .form-row{
     margin: 50px;
    
 }
+ */
+/* .form-input{
 
-.form-input{
-/* border: solid 1px grey;
-background-color: aqua; */
 margin-left: 50px;
 margin-top: 10px;
 margin-bottom: 10px;
-}
+} */
 
-.form-input input{
-    border: solid 1px rgb(78, 35, 35);
-  /*   background-color: rgb(27, 151, 58); */
+/* .form-input input{
+
     font-size: 20px;
   width: 400px;
 height: 100%;
 
-}
+} */
 
 
   
