--- a/src/components/cartContainer/cartContainer.css
+++ b/src/components/cartContainer/cartContainer.css
@@ -1,10 +1,12 @@
-.container-list {
+.cart-container-list {
     width: 90%;
     padding-right: .75rem;
     padding-left:.75rem;
     padding-bottom: .75rem;
+    padding-top: .75rem;
     margin-right: auto;
     margin-left: auto;
+    border: 1px solid violet;
 }
 
 h1{
