--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -1,22 +1,57 @@
 .bg-img {
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  align-self: start;
   
 }
 
 .bg-img-1{
   background-image: url("https://scontent.faep24-1.fna.fbcdn.net/v/t39.30808-6/244965570_4799687023377266_4374481668568893684_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=973b4a&_nc_ohc=bWLstdhYyZAAX_j1rAq&_nc_ht=scontent.faep24-1.fna&oh=00_AT9JxI2IiRRP_Yt432kwPOmEHoP4qhFDV9Cke1tKZa3QGg&oe=622277C3");
-  min-height: 100px;
+  min-height: 80px;
+ 
+  
 }
 
  .bg-img-2{
-    background-image: url("https://cabarcassarmientosas.com/wp-content/uploads/sites/5/2022/01/120120221642027534benelli-502c-banner-1536x509.jpg") !important;
-    min-height: 250px;
+    background-image: url("https://imgd.aeplcdn.com/1280x720/n/cw/ec/46558/benelli-trk-502-front-right-three-quarter0.jpeg") !important;
+    min-height: 700px;
+   /*  ok */
   } 
 
 
+  .bg-img-3{
+    background-image: url("https://solomoto.es/wp-content/uploads/2021/04/Benelli-302S_12.jpg") !important;
+    min-height: 700px;
+   /*  ver */
+  } 
+
+  .bg-img-4{
+    background-image: url("https://www.mdzol.com/u/fotografias/m/2021/11/15/f1456x819-1137294_1307664_5050.png") !important;
+    min-height: 700px;
+    /* ver */
+  } 
+  .bg-img-5{
+    min-height: 700px;
+    background-image: url("https://www.benellimaipu.com.ar/wp-content/uploads/sites/2/2020/10/502c_slider_2-1.jpg");
+  
+  /* ok */
+  }
+
+  .bg-img-6{
+    min-height: 700px;
+   
+    background-image: url("https://tiendup.cdn.appdomain.cloud/business/86/metafields/5c99476dce643.jpg");
+   /* ver */
+    
+  }
+  .bg-img-7{
+    min-height: 700px;
+    background-image: url("https://tiendup.cdn.appdomain.cloud/business/86/metafields/5c98d56c1de2e.jpg");
+ /*  no */
+    
+  }
 .container-topnav {
   position: absolute;
   margin: 20px;
