--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,24 +1,24 @@
 
-.hero-text {
+.home-hero-text {
   text-align: center;
   position: relative;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
   font-size: xx-large;
-  margin-top: -450px;
+  margin-top: -50px;
 }
 
-.hero-text p{
+.home-hero-text p{
   font-size: x-large;
 }
 
-.hero-text h3{
+.home-hero-text h3{
   margin-top: 30px;
   margin-bottom: 30px;
 }
 
-.btn-catalog{
+.home-btn-catalog{
   border: none;
   outline: 0;
   display: inline-block;
@@ -33,8 +33,118 @@
   border-radius: 10px;
 }
 
-.btn-catalog:hover {
+.home-btn-catalog:hover {
   background-color: #555;
   color: white;
 }
 
+.container-list-home {
+  width: 95%;
+  padding-bottom: .75rem;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+
+.card-flex-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-item {
+  position: relative;
+  width: 320px;
+  height: 370px;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  border: 1px solid black;
+  overflow: hidden;
+  margin: 5px;
+}
+
+.card-item::before {
+  content: "";
+  position: absolute;
+  top: -47%;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  transition: 0.5s;
+}
+
+
+.card-item::after {
+  content: "CARBO";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-weight: 600;
+  font-size: 6em;
+  color: rgba(255, 255, 255, 0.1);
+ 
+}
+
+.card-item .card-imgBox-item {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+  z-index: 1;
+
+}
+
+.card-item .card-imgBox-item img {
+  height: 100%;
+  max-height: 200px;
+}
+
+.card-item .card-contentBox-item {
+  position: relative;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 2;
+}
+
+.card-item .card-contentBox-item h3 {
+  font-size: 18px;
+  color: white;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.card-item .card-contentBox-item .card-price-item {
+  font-size: 24px;
+  color: white;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
+.card-item .card-contentBox-item .card-buy-item {
+  position: absolute;
+  top: 0;
+  opacity: 1;
+  padding: 10px 30px;
+  margin-top: 15px;
+  color: #000000;
+  text-decoration: none;
+  background: #ffffff;
+  border-radius: 30px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  transition: 0.5s;
+}
+
+.card-mouse-item {
+  height: 300px;
+  width: auto;
+  width: 250px;
+  border-radius: 5px;
+}
