--- a/src/components/itemHome/itemHome.css
+++ b/src/components/itemHome/itemHome.css
@@ -1,43 +1,44 @@
-.flex-items {
+.home-flex-items {
+    margin-top: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.card-item {
+.home-card-item {
     position: relative;
-    width: 320px;
+    width:300px;
     height: 370px;
-    background: #256497;
+    background: #000000;
     
     border-radius: 20px;
     overflow: hidden;
     margin: 5px;
 }
 
-.card-item::before {
+.home-card-item::before {
     content: "";
     position: absolute;
     top: -48%;
+    left:0%;
     width: 100%;
     height: 100%;
     background: #ffffff;
-   /*  transform: skewY(345deg); */
     transition: 0.5s;
-}
+} 
 
 
-.card-item::after {
+.home-card-item::after {
     content: "CARBO";
     position: absolute;
     bottom: 0;
     left: 0;
     font-weight: 600;
-    font-size: 6em;
+    font-size: 3em;
     color: rgba(0, 0, 0, 0.1);
 }
 
-.card-item .imgBox-item {
+.home-card-item .home-imgBox-item {
     position: relative;
     width: 100%;
     height: 200px;
@@ -49,15 +50,16 @@
 
 }
 
-.card-item .imgBox-item img {
+.home-card-item .home-imgBox-item img {
 
     height: 100%;
     max-height: 200px;
+ 
 }
 
-.card-item .contentBox-item {
+.home-card-item .home-contentBox-item {
     position: relative;
-    padding: 20px;
+    margin-top: -15px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -65,22 +67,24 @@
     z-index: 2;
 }
 
-.card-item .contentBox-item h3 {
+.home-card-item .home-contentBox-item h3 {
     font-size: 18px;
     color: white;
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 1px;
+
 }
 
-.card-item .contentBox-item .price-item {
+.home-card-item .home-contentBox-item .home-price-item {
     font-size: 24px;
     color: white;
     font-weight: 700;
     letter-spacing: 1px;
+  
 }
 
-.card-item .contentBox-item .buy-item {
+.home-card-item .home-contentBox-item .home-buy-item {
     position: relative;
     top: 0;
     opacity: 1;
@@ -93,11 +97,14 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     transition: 0.5s;
+    font-size: 15px;
+
+
 }
 
-.mouse-item {
+.home-mouse-item {
     height: 300px;
-    width: auto;
     width: 250px;
     border-radius: 5px;
+   
 }
