--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -8,7 +8,7 @@
 }
 
 .bg-img-1{
-  background-image: url("https://scontent.faep24-1.fna.fbcdn.net/v/t39.30808-6/244965570_4799687023377266_4374481668568893684_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=973b4a&_nc_ohc=bWLstdhYyZAAX_j1rAq&_nc_ht=scontent.faep24-1.fna&oh=00_AT9JxI2IiRRP_Yt432kwPOmEHoP4qhFDV9Cke1tKZa3QGg&oe=622277C3");
+  background-image: url("../../img/navbar.jpg");
   min-height: 80px;
  
   
